# dmt-rs

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-CLEANUP.md  CODEX-FINDINGS.md  Cargo.toml  GEMINI-CODE-REVIEW.md  MIGRATION_TEST_RESULTS.md  PERFORMANCE.md  PLAN-pg-copy-optimization.md  README.md  SECURITY-REVIEW-DATE-INCREMENTAL-SYNC.md  TEST-PLAN-SECURITY-FIXES.md  benchmark-config.yaml  benchmark-mssql-to-mysql-full-tuning-off.yaml  benchmark-mssql-to-mysql-full-tuning-on.yaml  benchmark-mssql-to-mysql-load-data-off.yaml  benchmark-mssql-to-mysql-load-data-on.yaml  benchmark-mssql-to-mysql-tuning-off.yaml  benchmark-mssql-to-mysql-tuning-on.yaml  benchmark-pg-pg-config.yaml  benchmark-pg-to-mssql-go-settings.yaml  benchmark-pg-to-mssql-upsert.yaml  benchmark-pg-to-mssql.yaml  benchmark-pg-to-pg-inline-pk.yaml  benchmark-rust-only.sh  benchmark-upsert-clean.yaml  benchmark-upsert-config.yaml  benchmark-upsert-pg-to-mssql.yaml  benchmark-upsert-watermark.yaml  benchmark-watermark-posts-test.yaml  benchmark-watermark-test.yaml  benchmark.sh  config.example.json  config.example.yaml  e2e-pg-watermark-users.yaml  run-all-tests.sh  test-mssql-to-mssql-drop.yaml  (+18 more)
crates/dmt-rs-cli/: Cargo.toml
crates/dmt-rs-cli/src/: main.rs  wizard.rs
crates/dmt-rs-cli/src/tui/: app.rs  events.rs  mod.rs  wizard.rs
crates/dmt-rs-cli/tests/: cli_tests.rs
docs/: DATA_ENGINEER_GUIDE.md  ai-ddl-prompt-handoff.md  benchmark-go-vs-dmt-rs.md  benchmark-playbook.md  benchmark-results-m3-max.md  benchmarks-archive.md  benchmarks.md  design.md  mysql-baseline.md  (+7 more)
(+49 files in other folders)
