[package]
name = "dmt-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "dmt-rs CLI: cross-database migration command-line tool"

[[bin]]
name = "dmt-rs"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "crossterm", "fuzzy-matcher"]
kerberos = ["dmt-rs/kerberos"]
mysql = ["dmt-rs/mysql"]
ai = ["dmt-rs/ai"]

[dependencies]
dmt-rs = { path = "../dmt-rs" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# TLS crypto provider (must be initialized before any TLS operations)
rustls = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# JSON output
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Interactive prompts
dialoguer = "0.11"

# Date/time (for TUI log formatting)
chrono = { workspace = true }

# TUI (optional, enabled with --features tui)
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
